Add Project module
