# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthenticationController;
 use App\Http\Controllers\ClientController;
+use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -24,4 +25,6 @@ Route::middleware('auth:sanctum')->group(function () {
 
     Route::apiResource('users', UserController::class);
     Route::apiResource('clients', ClientController::class);
+    Route::apiResource('projects', ProjectController::class)->except(['store']);
+    Route::post('/clients/{client}/projects', [ProjectController::class, 'store']);
 });
